# summary-buddy-chatbot

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DOCKER.md  README.md  SETUP.md  nx.json  package.json  pnpm-lock.yaml
api-server/: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  project.json  pyproject.toml  requirements.txt  wsgi.py
api-server/app/: __init__.py  config.py  main.py
api-server/app/api/: __init__.py  admin.py  chatbot.py  health.py
api-server/app/db/: README.md  SCHEMA.md  alembic.ini  cli.py  env.py  manage.py
api-server/app/db/versions/: 001_initial.py
api-server/app/models/: database.py
api-server/app/services/: README.md  llm_service.py  pdf_processor.py  rag_pipeline.py  storage.py  vector_db.py
api-server/app/utils/: logger.py
api-server/config/: dev.yaml  prod.yaml
devops/: project.json
devops/docker/: docker-compose.dev.yml  docker-compose.yml  infra.dev.yml  infra.prod.yml
file-storage/: compose.dev.yml  compose.prod.yml  project.json
vector-database/: compose.dev.yml  compose.prod.yml  project.json
webui/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  compose.dev.yml  compose.prod.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  project.json  tsconfig.json  vite.config.ts
webui/public/: index.html
webui/src/: App.tsx
webui/src/components/: AdminPanel.tsx  Chat.tsx
webui/src/pages/: AdminPage.tsx  GameMasterPage.tsx
webui/src/services/: api.ts
webui/src/styles/: AdminPage.css  App.css  (+3 more)
(+1 files in other folders)
