[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summary-buddy-chatbot"
version = "1.0.0"
description = "A full-stack RAG-powered chatbot that answers questions about uploaded documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Development Team"}
]
dependencies = [
    "Flask==3.0.0",
    "Flask-CORS==4.0.0",
    "python-dotenv==1.0.0",
    "PyYAML>=6.0",
    "Werkzeug==3.0.1",
    "SQLAlchemy==2.0.23",
    "Flask-SQLAlchemy==3.1.1",
    "psycopg2-binary==2.9.12",
    "alembic==1.13.1",
    "pypdf==4.0.1",
    "pgvector==0.2.5",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-openai==0.0.8",
    "langchain-text-splitters==0.0.2",
    "openai==1.10.0",
    "httpx==0.27.2",
    "gunicorn==21.2.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "boto3==1.34.7",
    "python-logging-loki==0.3.1",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==6.1.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
